# jps-bazel

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  MODULE.bazel
rules/: jps.bzl
src/: JpsBazelBuilder.kt  ProtoWorkerMessageProcessor.kt  WorkRequestHandler.kt
testSrc/: WorkRequestHandlerTest.kt
