module(
    name = "rules_jps",
    version = "0.1",
)

bazel_dep(name = "bazel_worker_api", version = "0.0.2")
bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "rules_kotlin", version = "2.0.0-jb.5")
bazel_dep(name = "rules_graalvm", version = "0.11.3")

# https://github.com/bazelbuild/bazel/issues/6681#issuecomment-2188972754
bazel_dep(name = "contrib_rules_jvm", version = "0.27.0")

# GraalVM
git_override(
    module_name = "rules_graalvm",
    remote = "https://github.com/sgammon/rules_graalvm",
    commit = "cc62783c4cf6013073b702c5eb363b29bf2edbc8",
)
graalvm = use_extension("@rules_graalvm//:extensions.bzl", "graalvm")

graalvm.graalvm(
    name = "graalvm",
    distribution = "oracle",
    java_version = "23",
    version = "23.0.0",
)

use_repo(graalvm, "graalvm")
register_toolchains("@graalvm//:jvm")
register_toolchains("@graalvm//:sdk")

# Kotlin Rules
archive_override(
    module_name = "rules_kotlin",
    urls = ["https://github.com/develar/rules_kotlin/releases/download/v2.0.0-jb.5/rules_kotlin-v2.0.0-jb.5.tar.gz"],
    integrity = "sha256-yz4Vx2iAisZxz/uHFtu6jbMFcaLgnheDBOTakG39GdE=",
)

# Libraries
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_file(
    name = "protobuf-java-file",
    url = "https://cache-redirector.jetbrains.com/repo1.maven.org/maven2/com/google/protobuf/protobuf-java/4.28.3/protobuf-java-4.28.3.jar",
    sha256 = "ba02977c0fef8b40af9f85fe69af362d8e13f2685b49a9752750b18da726157e",
    downloaded_file_path = "file.jar",
)
http_file(
    name = "protobuf-java-util-file",
    url = "https://cache-redirector.jetbrains.com/repo1.maven.org/maven2/com/google/protobuf/protobuf-java-util/4.28.3/protobuf-java-util-4.28.3.jar",
    sha256 = "d706eb7b4fbb63b7a39891106341080ebbadbb78dd8daecba7a6e68d2831c9cd",
    downloaded_file_path = "file.jar",
)

http_jar(
    name = "junit_jupiter_api",
    url = "https://repo1.maven.org/maven2/org/junit/jupiter/junit-jupiter-api/5.11.3/junit-jupiter-api-5.11.3.jar",
)

http_jar(
    name = "junit_jupiter_engine",
    url = "https://repo1.maven.org/maven2/org/junit/jupiter/junit-jupiter-engine/5.11.3/junit-jupiter-engine-5.11.3.jar",
)

http_jar(
    name = "junit_platform_engine",
    url = "https://repo1.maven.org/maven2/org/junit/platform/junit-platform-engine/1.11.3/junit-platform-engine-1.11.3.jar",
)

http_jar(
    name = "junit_platform_reporting",
    url = "https://repo1.maven.org/maven2/org/junit/platform/junit-platform-reporting/1.11.3/junit-platform-reporting-1.11.3.jar",
)

http_jar(
    name = "junit_platform_launcher",
    url = "https://repo1.maven.org/maven2/org/junit/platform/junit-platform-launcher/1.11.3/junit-platform-launcher-1.11.3.jar",
)

http_jar(
    name = "junit_platform_commons",
    url = "https://repo1.maven.org/maven2/org/junit/platform/junit-platform-commons/1.11.3/junit-platform-commons-1.11.3.jar",
)

http_jar(
    name = "assertj",
    url = "https://repo1.maven.org/maven2/org/assertj/assertj-core/3.26.3/assertj-core-3.26.3.jar",
)

http_jar(
    name = "opentest4j",
    url = "https://repo1.maven.org/maven2/org/opentest4j/opentest4j/1.3.0/opentest4j-1.3.0.jar",
)
